# Choose-Your-Own-Adventure

./: .gitignore  render.yaml
backend/: .gitignore  main.py  pyproject.toml  render.yaml  requirements.txt
backend/core/: config.py  models.py  prompts.py  story_generator.py
backend/db/: database.py
backend/models/: job.py  story.py
backend/routes/: job.py  story.py
backend/schemas/: job.py  story.py
frontend/: .gitignore  vite.config.js
frontend/src/: App.jsx  util.js
frontend/src/Components/: LoadingStatus.jsx  StoryGame.jsx  StoryGenerator.jsx  StoryLoader.jsx  ThemeInput.jsx
